Generate lectures with solutions

--- a/lectures/ms_lecture02_discrete_time_systems/ms_lecture02_discrete_time_systems.tex
+++ b/lectures/ms_lecture02_discrete_time_systems/ms_lecture02_discrete_time_systems.tex
@@ -53,7 +53,7 @@
 \usetikzlibrary{positioning}
 
 \newboolean{showresults}
-\setboolean{showresults}{false}
+\setboolean{showresults}{true}
 
 \usetikzlibrary{pgfplots.groupplots}
 \usetikzlibrary{plotmarks}
