--- a/lectures/lecture_master/ms_lecture_master.tex
+++ b/lectures/lecture_master/ms_lecture_master.tex
@@ -22,6 +22,9 @@
 % \includepdf[pages=-,nup=2x1,frame=true,noautoscale=true,scale=0.8,offset=0cm 5cm]{../lecture13_downsampling/lecture13_downsampling.pdf}
 % \includepdf[pages=-,nup=2x1,frame=true,noautoscale=true,scale=0.8,offset=0cm 5cm]{../lecture14_upsampling/lecture14_upsampling.pdf} 
 % \includepdf[pages=-,nup=2x1,frame=true,noautoscale=true,scale=0.8,offset=0cm 5cm]{../lecture15_SDM/lecture15_SDM.pdf}
+% \includepdf[pages=-,nup=2x1,frame=true,noautoscale=true,scale=0.8,offset=0cm 5cm]{../lecture16_IIR_filtering/lecture16_IIR_filtering.pdf}
+
+
 
 % Handout 1 - Lectures 1 and 2
 % \includepdf[pages=-,nup=2x2,frame=true,noautoscale=true,scale=0.8]{../ms_lecture01_discrete_time_signals/ms_lecture01_discrete_time_signals.pdf}
@@ -54,6 +57,11 @@
 % \includepdf[pages=-,nup=2x2,frame=true,noautoscale=true,scale=0.8]{../lecture13_downsampling/lecture13_downsampling.pdf}
 % \includepdf[pages=-,nup=2x2,frame=true,noautoscale=true,scale=0.8]{../lecture14_upsampling/lecture14_upsampling.pdf}
 
-% Handout 9 - Lecture 15
-\includepdf[pages=-,nup=2x2,frame=true,noautoscale=true,scale=0.8]{../lecture15_SDM/lecture15_SDM.pdf}
+% % Handout 9 - Lecture 15
+% \includepdf[pages=-,nup=2x2,frame=true,noautoscale=true,scale=0.8]{../lecture15_SDM/lecture15_SDM.pdf}
+
+% Handout 10 - Lecture 16
+\includepdf[pages=-,nup=2x2,frame=true,noautoscale=true,scale=0.8]{../lecture16_IIR_filtering/lecture16_IIR_filtering.pdf}
+
+
 \end{document}
