--- a/lectures/syllabus/syllabus.tex
+++ b/lectures/syllabus/syllabus.tex
@@ -150,7 +150,7 @@ This unit provides an overview of semiconductor concepts at a level sufficient f
 \textbf{Unit 4: Diodes} \\
 The ideal diode, the diode terminal characteristics, the circuit models that are used to represent it, and its circuit applications such as the rectifier circuits, limiting and clamping circuits. \\
 
-\textbf{Unit 5: MOSFETs (4 lecture hours)} \\
+\textbf{Unit 5: MOSFETs} \\
 Device structure and physical operation, V-I characteristics, MOSFET circuits at DC.  Introduction to biasing, small signal operation and models.  Basic operation of MOSFET as an amplifier and as a switch. Depletion type MOSFET. \\
 
 \textbf{Unit 6: Bipolar Junction Transistors (BJT)} \\
