--- a/lectures/lecture01_signals/lecture01_signals.tex
+++ b/lectures/lecture01_signals/lecture01_signals.tex
@@ -74,13 +74,12 @@
 \title[ECEN 463/863]{Electronic Signals}
 \author{Maxx Seminario}
 \institute{University of Nebraska-Lincoln}
-\date{August 25, 2025}
+% \date{August 25, 2025}
 
 \begin{document}
 \begin{frame}
   \titlepage
 \end{frame}
-
 
 \section{What are Signals?}
 
@@ -368,7 +367,7 @@
         
         % 80% line
         \addplot[dashed, thick, black] coordinates {(1,8) (1000000,8)};
-        \node at (axis cs:100,8.5) {\small 80\% of $v_s$};
+        \node at (axis cs:10,8.5) {\small 80\% of $v_s$};
         
         \end{axis}
     \end{tikzpicture}
@@ -437,7 +436,7 @@
     % \vspace{0.3cm}
     
     \begin{block}{Solution}
-        Frequency spectrum representation!  (Next section)
+        Frequency spectrum representation!
     \end{block}
     
 \end{frame}
