--- a/lectures/syllabus/syllabus.tex
+++ b/lectures/syllabus/syllabus.tex
@@ -62,9 +62,9 @@
 \begin{document}
 \doublespacing
 \begin{center}
-	\textbf{\large University of Nebraska-Lincoln}
+	\textbf{\large University of Nebraska -- Lincoln}
 	
-	\textbf{\large ECEN 222: Electronic Circuits}
+	\textbf{\large ECEN 222}
 	
 	\textbf{\large Spring, 2026}
 	
@@ -95,7 +95,7 @@ e-mail: tgokie2@huskers.unl.edu
 
 \subsection*{Pre-Requisite} 
 \begin{itemize}
-	\item Electrical Circuits 1 (ECEN 213, ECEN 218)
+	\item Electronics and Circuits 1 (ECEN 215)
 	\item Basic Calculus
 \end{itemize}
 
@@ -123,7 +123,6 @@ The students who successfully complete this course will be able to:
 \subsection*{Textbook}
 \begin{itemize}
 	\item ``Microelectronic Circuits'', 7th edition, A. S. Sedra and K. C. Smith, Oxford University Press, 2015.
-	\item ISBN: 978-0-19-93913-6
 	\item Lecture notes will cover all the material, but further reading of the textbook is encouraged. 
 \end{itemize}
 
